Update index.html to localize content to French

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Mon Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
     <nav id="navbar">
         <ul>
-            <li><a href="#welcome-section">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#welcome-section">Accueil</a></li>
+            <li><a href="#projects">Projets</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="https://github.com/blackhorse182" id="profile-link" target="_blank">GitHub</a></li>
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Bienvenue sur mon portfolio</h1>
     </section>
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>Projets</h2>
         <div id="project-list">
-            <!-- Repositories will be dynamically inserted here -->
+            <!-- Les dépôts seront insérés dynamiquement ici -->
         </div>
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:william.dumas182@gmail.com">william.dumas182@gmail.com</a></p>
+        <p>Email : <a href="mailto:william.dumas182@gmail.com">william.dumas182@gmail.com</a></p>
     </section>
 </body>
 </html>
