--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mon Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="scripts/main.js" defer></script>
+    <link rel="icon" type="image/jpeg" href="images/image.jpg">
 </head>
 <body>
     <nav id="navbar">
